--- a/buspass.html
+++ b/buspass.html
@@ -289,7 +289,7 @@
 
             // Use a timeout to avoid any rendering delay
             setTimeout(() => {
-                window.location="/profile.html";
+                window.history.back();
             }, 0);
         });
 
