--- a/profile.html
+++ b/profile.html
@@ -261,7 +261,7 @@
     <div id="third-div">
         <div id="enter-busstop-details"><b>Setup Your Bus Stop</b></div>
         <div id="location-coordinates">
-            <input type="text" id="textDisplay" value="Choose One Option ..." >
+            <input type="text" id="textDisplay" value="Choose One Option ..." readonly >
             <img src="img/myLocation.svg" id="btnCurrentLocation" onclick="getCurrentLocation()" alt="Current Location">
             <a href="#" onclick="showMap()"> <img src="img/map.svg" alt="Map"></a>
         </div>
