--- a/route9/index.html
+++ b/route9/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where is my Bus</title>
     <link rel="shortcut icon" href="favicon.ico">
-    <style>
+    <style id="dynamic-styles">
+        /* Default styles (non-standalone) */
         body, html {
             margin: 0;
             padding: 0;
@@ -14,6 +15,8 @@
             overflow: hidden;
             font-family: Arial, sans-serif;
         }
+    </style>
+    <style>
 
         #animation-overlay {
             position: fixed;
@@ -41,7 +44,6 @@
     <div id="map-container">
         <iframe src="../route9/map.html" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
-    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <script>
         // Check if the PWA is in standalone mode
         if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
@@ -58,6 +60,7 @@
             `;
         }
     </script>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <script>
         window.onload = function() {
             const loginDoneCookie = getCookie("loginDone");
