--- a/profile.html
+++ b/profile.html
@@ -270,7 +270,7 @@
         <div id="select-bus-text"><b>Select Default Bus</b></div>
         <button
           id="info-button"
-          onclick="window.location='https://drive.google.com/file/d/1NhrncfuJtfb1phd_hVb_Mw3HbPC9Xrlw/view'"
+          onclick="window.location='https://drive.google.com/file/d/16cpuZKOB7OPFEcDGRBWvPQmv9s1gA2OS/view?usp=drive_link'"
         ></button>
       </div>
       <select id="bus-route-dropdown">
