--- a/announcement.html
+++ b/announcement.html
@@ -156,5 +156,10 @@
     <div class="floating-button right" onclick="window.location='/profile.html'">
         <img src="/img/profile.svg" alt="Profile">
     </div>
+    <script>
+        if (window.location.hostname !== '127.0.0.1' && window.location.hostname !== 'localhost') {
+            document.write('<script defer src="/_vercel/insights/script.js"><\/script>');
+        }
+    </script>
 </body>
 </html>
