--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
             }
         })();
     </script>
+    <script>
+        if (window.location.hostname !== '127.0.0.1' && window.location.hostname !== 'localhost') {
+            document.write('<script defer src="/_vercel/insights/script.js"><\/script>');
+        }
+    </script>
 </head>
 </html>
