--- a/info.html
+++ b/info.html
@@ -109,53 +109,53 @@
         <div id="drivers-info">
             <div class="driver-box">
                 <div class="driver-name">Route 1 Driver</div>
-                <div class="driver-details">Name: Laxman Reddy</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9701788665" class="phone-number">9701788665</a></div>
+                <div class="driver-details">Name: G.V Reddy</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9000252535" class="phone-number">9000252535</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 2 Driver</div>
-                <div class="driver-details">Name: Laxman Reddy</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9951926864" class="phone-number">9951926864</a></div>
+                <div class="driver-details">Name: M.N Reddy</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9494444468" class="phone-number">9494444468</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 3 Driver</div>
-                <div class="driver-details">Name: Laxman Reddy</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9951926864" class="phone-number">9951926864</a></div>
+                <div class="driver-details">Name: T.N Rao</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9963120818" class="phone-number">9963120818</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 4 Driver</div>
-                <div class="driver-details">Name: Venkatesh</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9951926864" class="phone-number">9951926864</a></div>
+                <div class="driver-details">Name: P Kantaiah</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:8074017988" class="phone-number">8074017988</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 5 Driver</div>
-                <div class="driver-details">Name: Parameshwara Rao</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:7671982513" class="phone-number">7671982513</a></div>
+                <div class="driver-details">Name: Subash Rao</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:7036864220" class="phone-number">7036864220</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 6 Driver</div>
-                <div class="driver-details">Name: Lakkiram Nayak</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9912939397" class="phone-number">9912939397</a></div>
+                <div class="driver-details">Name: SD . Zafeer</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9948056679" class="phone-number">9948056679</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 7 Driver</div>
-                <div class="driver-details">Name: Lakkiram Nayak</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9912939397" class="phone-number">9912939397</a></div>
+                <div class="driver-details">Name: Dasharatham</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:7382817805" class="phone-number">7382817805</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 8 Driver</div>
-                <div class="driver-details">Name: Lakkiram Nayak</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9912939397" class="phone-number">9912939397</a></div>
+                <div class="driver-details">Name: Esu Padham</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9182265556" class="phone-number">9182265556</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 9 Driver</div>
-                <div class="driver-details">Name: Lakkiram Nayak</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9912939397" class="phone-number">9912939397</a></div>
+                <div class="driver-details">Name: Siddi Ramulu</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:8466850500" class="phone-number">8466850500</a></div>
             </div>
             <div class="driver-box">
                 <div class="driver-name">Route 10 Driver</div>
-                <div class="driver-details">Name: Lakkiram Nayak</div>
-                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:9912939397" class="phone-number">9912939397</a></div>
+                <div class="driver-details">Name: B . Ram Reddy</div>
+                <div><span class="phone-number-label">Phone Number :</span> <a href="tel:8332022569" class="phone-number">8332022569</a></div>
             </div>
             
         </div>
