--- a/profile.html
+++ b/profile.html
@@ -411,6 +411,7 @@
     // JavaScript functions for location coordinates div
     function getCurrentLocation() {
       if (navigator.geolocation) {
+        alert("Fetching your location , please wait !!");
         navigator.geolocation.getCurrentPosition(showPosition, showError, {
           enableHighAccuracy: true,
         });
