--- a/profile.html
+++ b/profile.html
@@ -369,7 +369,7 @@
       .getElementById("mail-image")
       .addEventListener("click", function () {
         // Email address
-        const emailAddress = "mlrit.whereismybus@gmail.com";
+        const emailAddress = "query.whereismybus@gmail.com";
 
         // Subject of the email (optional)
         const subject = encodeURIComponent("Feedback or Query");
