--- a/pwaInstallation/help.html
+++ b/pwaInstallation/help.html
@@ -133,7 +133,7 @@
                 </ol>
                 <div style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-top: 20px;">
                     <p style="margin: 0;">Any Query?</p>
-                    <a href="mailto:mlrit-whereismybus@gmail.com?subject=Problem%20with%20App%20Download">
+                    <a href="mailto:query.whereismybus@gmail.com?subject=Problem%20with%20App%20Download">
                         <img src="/pwaInstallation/images/mail.svg" alt="Email" style="width: 25px; height: 25px;"/>
                     </a>
                 </div>
@@ -150,7 +150,7 @@
                 </ol>
                 <div style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-top: 20px;">
                     <p style="margin: 0;">Any Query?</p>
-                    <a href="mailto:mlrit-whereismybus@gmail.com?subject=Problem%20with%20App%20Download">
+                    <a href="mailto:query.whereismybus@gmail.com?subject=Problem%20with%20App%20Download">
                         <img src="/pwaInstallation/images/mail.svg" alt="Email" style="width: 25px; height: 25px;"/>
                     </a>
                 </div>
@@ -168,7 +168,7 @@
                 </ol>
                 <div style="display: flex; justify-content: center; align-items: center; gap: 10px; margin-top: 20px;">
                     <p style="margin: 0;">Any Query?</p>
-                    <a href="mailto:mlrit-whereismybus@gmail.com?subject=Problem%20with%20App%20Download">
+                    <a href="mailto:query.whereismybus@gmail.com?subject=Problem%20with%20App%20Download">
                         <img src="/pwaInstallation/images/mail.svg" alt="Email" style="width: 25px; height: 25px;"/>
                     </a>
                 </div>
