--- a/profile.html
+++ b/profile.html
@@ -267,7 +267,7 @@
     <div style="display: flex; align-items: center; justify-content: center">
       <div id="select-bus-text"><b>Select Default Bus</b></div>
       <button id="info-button"
-        onclick="window.location='https://drive.google.com/file/d/16cpuZKOB7OPFEcDGRBWvPQmv9s1gA2OS/view?usp=drive_link'"></button>
+        onclick="window.location='https://drive.google.com/file/d/16cpuZKOB7OPFEcDGRBWvPQmv9s1gA2OS/view?usp=sharing'"></button>
     </div>
     <select id="bus-route-dropdown">
       <option value="" disabled selected>Select a route</option>
