--- a/fullMap.html
+++ b/fullMap.html
@@ -129,8 +129,14 @@
         let busMarkers = {
             bus1: null,
             bus2: null,
+            bus3: null,
+            bus4: null,
+            bus5: null,
+            bus6: null,
+            bus7: null,
+            bus8: null,
             bus9: null,
-            bus21: null
+            bus10: null
         };
         let deviceLocationMarker;
         let markersClusterGroup = L.markerClusterGroup({
