--- a/route9/index.html
+++ b/route9/index.html
@@ -42,7 +42,7 @@
         <dotlottie-player id="lottie-player" src="../busAnimation.json" background="transparent" speed="1.2" style="width: 300px; height: 300px" direction="1" playMode="normal" autoplay></dotlottie-player>
     </div>
     <div id="map-container">
-        <iframe src="../announcement.html" style="width: 100%; height: 100%; border: none;"></iframe>
+        <iframe src="/route9/map.html" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
     <script>
         // Check if the PWA is in standalone mode
