--- a/map.html
+++ b/map.html
@@ -184,7 +184,7 @@
     </div>
     <div id="map"></div>
     <div id="coordinates-save-container">
-        <div id="coordinates"></div>
+        <div id="coordinates">Loading...</div>
         <button id="save-button">Save</button>
     </div>
     <div id="buttons-container">
