--- a/pages/fullMap.html
+++ b/pages/fullMap.html
@@ -542,13 +542,13 @@
                 bus1: '/img/one.svg',
                 bus2: '/img/two.svg',
                 bus3: '/img/three.png',
-                bus4: '/img/four.svg',
-                bus5: '/img/five.svg',
+                bus4: '/img/four.png',
+                bus5: '/img/five.png',
                 bus6: '/img/six.png',
-                bus7: '/img/seven.svg',
-                bus8: '/img/eight.svg',
-                bus9: '/img/nine.png',
-                bus10: '/img/ten.svg'
+                bus7: '/img/seven.png',
+                bus8: '/img/eight.png',
+                bus9: '/img/nine.svg',
+                bus10: '/img/ten.png'
             };
 
 
