youtube tutorials update

--- a/mainMap/map.html
+++ b/mainMap/map.html
@@ -498,7 +498,7 @@
                 <div id="info-btn" class="info-toggle-btn">
                     <span class="info-text-wrapper">
                         <span class="info-text">
-                            <a href="https://youtu.be/sjNcwHucais" target="_blank">Click Here</a> to
+                            <a href="https://youtu.be/K6pgS2yca_Y" target="_blank">Click Here</a> to
                             Know
                             How this page works !
                         </span>
