--- a/pages/DefaultBusstopMenu.html
+++ b/pages/DefaultBusstopMenu.html
@@ -49,7 +49,7 @@
 <button id="info-btn" class="info-toggle-btn">
   <span class="info-text-wrapper">
     <span class="info-text">
-       <a href="https://youtu.be/sjNcwHucais" target="_blank">Click Here</a> to Know How to SetUp BusStop!
+       <a href="https://youtu.be/t4Ywo2TUKD0" target="_blank">Click Here</a> to Know How to SetUp BusStop!
     </span>
   </span>
   <span class="icon-wrapper">
