--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -39,7 +39,7 @@
     </div>
   </div>
 <div class="logo-video-wrapper">
-  <a href="https://youtu.be/sjNcwHucais" target="_blank" rel="noopener noreferrer">
+  <a href="https://youtu.be/jLcYktp3Iz0" target="_blank" rel="noopener noreferrer">
     <div class="video-thumbnail" id="video-thumbnail">
       <img src="../assets/images/thumbnail.jpg" alt="YouTube Thumbnail" />
       <div class="play-icon">
