--- a/announcement.html
+++ b/announcement.html
@@ -107,7 +107,7 @@
 <body>
 	<div class="container">
 		<h1>Coming Soon<span class="dots">.</span></h1>
-		<p>This Bus GPS Tracker is currently in <strong>Offline </strong>Mode , once it got repaired , you can start Tracking it !</p>
+		<p>Route no. 5 Bus GPS Tracker is currently in <strong>Offline </strong>Mode , once it got repaired , you can start Tracking it !</p>
 	</div>
 
 	<script>
