--- a/pages/fullMap.html
+++ b/pages/fullMap.html
@@ -389,13 +389,14 @@
             bus1: null,
             bus2: null,
             bus3: null,
-            bus4: null,
+            // bus4: null,
             bus5: null,
             bus6: null,
             bus7: null,
             bus8: null,
             bus9: null,
-            bus10: null
+            bus10: null,
+            bus11: null
         };
 
         let deviceLocationMarker;
@@ -447,15 +448,16 @@
 
                 const busData = {
                     bus1: filterBusData(data, 399),
-                    bus2: filterBusData(data, 389),
+                    bus2: filterBusData(data, 402),
                     bus3: filterBusData(data, 395),
-                    bus4: filterBusData(data, 393),
-                    bus5: filterBusData(data, 402),
-                    bus6: filterBusData(data, 380),
-                    bus7: filterBusData(data, 376),
-                    bus8: filterBusData(data, 396),
-                    bus9: filterBusData(data, 381),
-                    bus10: filterBusData(data, 386)
+                    // bus4: filterBusData(data, 393),
+                    bus5: filterBusData(data, 396),
+                    bus6: filterBusData(data, 381),
+                    bus7: filterBusData(data, 389),
+                    bus8: filterBusData(data, 386),
+                    bus9: filterBusData(data, 393),
+                    bus10: filterBusData(data, 380),
+                    bus11: filterBusData(data, 376)
                 };
 
 
@@ -542,13 +544,14 @@
                 bus1: '/img/one.svg',
                 bus2: '/img/two.svg',
                 bus3: '/img/three.png',
-                bus4: '/img/four.png',
+                // bus4: '/img/four.png',
                 bus5: '/img/five.png',
                 bus6: '/img/six.png',
                 bus7: '/img/seven.png',
                 bus8: '/img/eight.png',
                 bus9: '/img/nine.svg',
-                bus10: '/img/ten.png'
+                bus10: '/img/ten.png',
+                bus11: '/img/eleven.png'
             };
 
 
