--- a/mainMap/map.html
+++ b/mainMap/map.html
@@ -743,15 +743,16 @@
 <script>
     const allRoutes = [
         ["route1", "Route 1", 399],
-        ["route2", "Route 2", 389],
+        ["route2", "Route 2", 402],
         ["route3", "Route 3", 395],
-        ["route4", "Route 4", 393],
-        ["route5", "Route 5", 402],
+        // ["route4", "Route 4", 393],
+        ["route5", "Route 5", 396],
         ["route6", "Route 6", 381],
-        ["route7", "Route 7", 376],
-        ["route8", "Route 8", 396],
-        ["route9", "Route 9", 380],
-        ["route10", "Route 10", 386]
+        ["route7", "Route 7", 389],
+        ["route8", "Route 8", 386],
+        ["route9", "Route 9", 393],
+        ["route10", "Route 10", 380],
+        ["route10", "Route 10", 376]
     ];
 
     const thisRoute = localStorage.getItem('thisRoute');
